release-data/changelogs/8.3/plugins/benchmark-cis-rhel-8.adoc
= Changelogs for Rudder plugin benchmark-cis-rhel-8 8.3.\* versions

== benchmark-cis-rhel-8-8.3.12-0.10 (2026-06-12)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== benchmark-cis-rhel-8-8.3.11-0.10 (2026-05-04)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== benchmark-cis-rhel-8-8.3.10-0.10 (2026-04-01)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== benchmark-cis-rhel-8-8.3.9-0.10 (2026-02-16)

=== Changes


=== Bug fixes

==== Miscellaneous

* Fixed: Uninstall on benchmarks failed due to permission denied on prerm script
    (https://issues.rudder.io/issues/28045[#28045])

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== benchmark-cis-rhel-8-8.3.8-0.10 (2025-12-22)

=== Changes


=== Bug fixes

==== Miscellaneous

* Fixed: There are still some mention to CIS in the benchmarks
    (https://issues.rudder.io/issues/28043[#28043])

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== benchmark-cis-rhel-8-8.3.7-0.10 (2025-12-10)

=== Changes


==== Miscellaneous

* Add lib for augeas methods and implement it in all benchmarks
    (https://issues.rudder.io/issues/27761[#27761])
* Refactoring level 2 controls point in kcllib
    (https://issues.rudder.io/issues/27764[#27764])

=== Bug fixes

==== Miscellaneous

* Fixed: Changes on whitespace semantic breaks benchmarks
    (https://issues.rudder.io/issues/27936[#27936])
* Fixed: Postint should create  /var/rudder/plugins/security-benchmarks/install otherwise rsync may fails
    (https://issues.rudder.io/issues/27794[#27794])
* Fixed: Rename the benchmarks RHEL 8, Debian 11, Debian 12 and Ubuntu 22 to remove CIS
    (https://issues.rudder.io/issues/27806[#27806])

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== benchmark-cis-rhel-8-8.3.5-0.10 (2025-10-02)

=== Changes


=== Bug fixes

==== Miscellaneous

* Fixed: RHEL 9 - Section 4.3.3 and 4.3.4 are compliant even if nftable is not present
    (https://issues.rudder.io/issues/27509[#27509])
* Fixed: There are some "null" in the bench descriptions
    (https://issues.rudder.io/issues/27583[#27583])

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== benchmark-cis-rhel-8-8.3.4-0.10 (2025-09-15)

=== Changes


==== Miscellaneous

* Extend shellcheck to all benchmarks
    (https://issues.rudder.io/issues/27359[#27359])

=== Bug fixes

==== Miscellaneous

* Fixed: RHEL 9 - 5.4.1.6 - test command is invalid
    (https://issues.rudder.io/issues/27510[#27510])
* Fixed: CIS RHEL 8 : fixes on control points
    (https://issues.rudder.io/issues/27492[#27492])
* Fixed: CIS : Fixes on RHEL 8
    (https://issues.rudder.io/issues/27484[#27484])
* Fixed: CIS : Fixes on RHEL 8
    (https://issues.rudder.io/issues/27484[#27484])
* Fixed: CIS - Debian 11 - Implement Section 4
    (https://issues.rudder.io/issues/27408[#27408])
* Fixed: RHEL 8 - 1.5.1.3 - add constraint on parameter
    (https://issues.rudder.io/issues/27396[#27396])
* Fixed: Error in Section 1.5.1.4 of RHEL8
    (https://issues.rudder.io/issues/27344[#27344])
* Fixed: CIS RHEL 8 Section 1.1.1.1 compliant code is reversed
    (https://issues.rudder.io/issues/27357[#27357])
* Fixed: RHEL 8 - Section 3.4 : error on control point
    (https://issues.rudder.io/issues/27345[#27345])
* Fixed: Error in Section 1.8.10 of RHEL8
    (https://issues.rudder.io/issues/27338[#27338])
* Fixed: RHEL 8 - Section 4.1 : missing section & fixes
    (https://issues.rudder.io/issues/27339[#27339])
* Fixed: RHEL 8 - Section 4.2 : missing const.dollar & fixes
    (https://issues.rudder.io/issues/27340[#27340])
* Fixed: RHEL 8 - Section 2.2 : inversion of key / value & fixes
    (https://issues.rudder.io/issues/27342[#27342])
* Fixed: RHEL 8 - Section 3.1 : errors on control point
    (https://issues.rudder.io/issues/27343[#27343])
* Fixed: RHEL 8 - Section 5.2 - Configure system accounting
    (https://issues.rudder.io/issues/27222[#27222])
* Fixed: RHEL 8 - Section 4.3 : missing bash for executing script
    (https://issues.rudder.io/issues/27341[#27341])
* Fixed: Script 6_2_4_UIDs_consistency.sh, 6_2_5_GIDs_consistency.sh, 6_2_6_username_consistency.sh, 6_2_7_groupname_consistency.sh exit 0 even when it should node
    (https://issues.rudder.io/issues/27350[#27350])
* Fixed: RHEL 8 - Section 6.2 - Local group & group settings
    (https://issues.rudder.io/issues/27225[#27225])
* Fixed: RHEL 8 - Section 4.5 - User account & environment
    (https://issues.rudder.io/issues/27220[#27220])
* Fixed: RHEL 8 - Section 4.3 - Configure privilege escalation
    (https://issues.rudder.io/issues/27216[#27216])
* Fixed: RHEL 8 - Section 4.4 - Configure Authentication Module
    (https://issues.rudder.io/issues/27219[#27219])
* Fixed: RHEL 8 - Section 5.3 - Configure Integrity check
    (https://issues.rudder.io/issues/27223[#27223])
* Fixed: RHEL 8 - Section 4.2 - Configure SSH
    (https://issues.rudder.io/issues/27215[#27215])
* Fixed: RHEL 8 - Section 5.1 - configure Logging
    (https://issues.rudder.io/issues/27221[#27221])
* Fixed: Duplicated UUID between technique section 4.1.1.6 and 4.1.1.7
    (https://issues.rudder.io/issues/27284[#27284])
* Fixed: Missing section 4 in main cis_rhel8
    (https://issues.rudder.io/issues/27285[#27285])
* Fixed: metadata.json generated is incomplete
    (https://issues.rudder.io/issues/27291[#27291])
* Fixed: RHEL 8 - Section 6.1 Filesystem permission
    (https://issues.rudder.io/issues/27224[#27224])

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== benchmark-cis-rhel-8-8.3.2-0.10 (2025-06-04)

=== Changes


==== Miscellaneous

* Manual items report a generic message and should include the item number
    (https://issues.rudder.io/issues/26929[#26929])

=== Bug fixes

==== Miscellaneous

* Fixed: Add the intermediate generated YAML to the repository
    (https://issues.rudder.io/issues/27030[#27030])

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== benchmark-cis-rhel-8-8.3.1-0.10 (2025-05-07)

=== Changes


==== Miscellaneous

* Security Benchmarks - RHEL 8 Section 2
    (https://issues.rudder.io/issues/26780[#26780])
* Security Benchmarks - RHEL 8 Section 3
    (https://issues.rudder.io/issues/26783[#26783])
* Security Benchmarks - RHEL 8 Setup and Section 1
    (https://issues.rudder.io/issues/26763[#26763])

=== Bug fixes

==== Miscellaneous

* Fixed: Missing parameters in the cis benchmarks
    (https://issues.rudder.io/issues/26837[#26837])

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

