release-data/changelogs/9.0/plugins/benchmark-cis-rhel-8.adoc
= Changelogs for Rudder plugin benchmark-cis-rhel-8 9.0.\* versions

== benchmark-cis-rhel-8-9.0.9-0.10 (2026-08-06)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== benchmark-cis-rhel-8-9.0.8-0.10 (2026-07-12)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== benchmark-cis-rhel-8-9.0.7-0.10 (2026-06-12)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== benchmark-cis-rhel-8-9.0.6-0.10 (2026-05-04)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== benchmark-cis-rhel-8-9.0.5-0.10 (2026-04-02)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== benchmark-cis-rhel-8-9.0.4-0.10 (2026-02-16)

=== Changes


==== Miscellaneous

* Refactor control point file key value and service restart
    (https://issues.rudder.io/issues/28016[#28016])

=== Bug fixes

==== Miscellaneous

* Fixed: CIS : rudder_syctl_file is not defined for the benchmark
    (https://issues.rudder.io/issues/28192[#28192])
* Fixed: Debian 12 : path for resource calling is not correct
    (https://issues.rudder.io/issues/28193[#28193])
* Fixed: Uninstall on benchmarks failed due to permission denied on prerm script
    (https://issues.rudder.io/issues/28045[#28045])
* Fixed: Remove CIS mention in category.xml and control.yml
    (https://issues.rudder.io/issues/28146[#28146])
* Fixed: Update rudderc dependency in 9.0
    (https://issues.rudder.io/issues/28121[#28121])

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== benchmark-cis-rhel-8-9.0.3-0.10 (2025-12-22)

=== Changes


=== Bug fixes

==== Miscellaneous

* Fixed: There are still some mention to CIS in the benchmarks
    (https://issues.rudder.io/issues/28043[#28043])

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== benchmark-cis-rhel-8-9.0.2-0.10 (2025-12-10)

=== Changes


==== Miscellaneous

* Refactor all bash script call
    (https://issues.rudder.io/issues/27994[#27994])
* Add lib for augeas methods and implement it in all benchmarks
    (https://issues.rudder.io/issues/27761[#27761])
* Refactoring level 2 controls point in kcllib
    (https://issues.rudder.io/issues/27764[#27764])
* Add new CIS fields and display them in right part (sharing space with documentation)
    (https://issues.rudder.io/issues/27868[#27868])

=== Bug fixes

==== Miscellaneous

* Fixed: Changes on whitespace semantic breaks benchmarks
    (https://issues.rudder.io/issues/27936[#27936])
* Fixed: CIS RHEL 9 Section 5.3.3.2.6 : 1st test is reversed
    (https://issues.rudder.io/issues/27854[#27854])
* Fixed: Postint should create  /var/rudder/plugins/security-benchmarks/install otherwise rsync may fails
    (https://issues.rudder.io/issues/27794[#27794])
* Fixed: Rename the benchmarks RHEL 8, Debian 11, Debian 12 and Ubuntu 22 to remove CIS
    (https://issues.rudder.io/issues/27806[#27806])
* Fixed: CIS RHEL 9 Section 6.1.3 : Incorrect path hardcoded in our test, may vary on actual target systems
    (https://issues.rudder.io/issues/27847[#27847])

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== benchmark-cis-rhel-8-9.0.1-0.10 (2025-11-19)

=== Changes


==== Miscellaneous

* Allow fields to have no policy mode (only disabled) and display Manual and Unimplemented tags
    (https://issues.rudder.io/issues/27714[#27714])

=== Bug fixes

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== benchmark-cis-rhel-8-9.0.0-0.10 (2025-10-22)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== benchmark-cis-rhel-8-9.0.0.rc1-0.10 (2025-10-13)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== benchmark-cis-rhel-8-9.0.0.beta2-0.10 (2025-10-07)

=== Changes


=== Bug fixes

==== Miscellaneous

* Fixed: Make RHEL8, RHEL9 and Debian11 plugin available
    (https://issues.rudder.io/issues/27629[#27629])
* Fixed: RHEL 9 - Section 4.3.3 and 4.3.4 are compliant even if nftable is not present
    (https://issues.rudder.io/issues/27509[#27509])
* Fixed: There are some "null" in the bench descriptions
    (https://issues.rudder.io/issues/27583[#27583])

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== benchmark-cis-rhel-8-9.0.0.beta1-0.10 (2025-09-09)

=== Changes


==== Miscellaneous

* Extend shellcheck to all benchmarks
    (https://issues.rudder.io/issues/27359[#27359])

=== Bug fixes

==== Miscellaneous

* Fixed: RHEL 9 - 5.4.1.6 - test command is invalid
    (https://issues.rudder.io/issues/27510[#27510])
* Fixed: CIS RHEL 8 : fixes on control points
    (https://issues.rudder.io/issues/27492[#27492])
* Fixed: CIS : Fixes on RHEL 8
    (https://issues.rudder.io/issues/27484[#27484])
* Fixed: CIS : Fixes on RHEL 8
    (https://issues.rudder.io/issues/27484[#27484])
* Fixed: CIS - Debian 11 - Implement Section 4
    (https://issues.rudder.io/issues/27408[#27408])
* Fixed: RHEL 8 - 1.5.1.3 - add constraint on parameter
    (https://issues.rudder.io/issues/27396[#27396])
* Fixed: Error in Section 1.5.1.4 of RHEL8
    (https://issues.rudder.io/issues/27344[#27344])
* Fixed: CIS RHEL 8 Section 1.1.1.1 compliant code is reversed
    (https://issues.rudder.io/issues/27357[#27357])
* Fixed: RHEL 8 - Section 3.4 : error on control point
    (https://issues.rudder.io/issues/27345[#27345])
* Fixed: Error in Section 1.8.10 of RHEL8
    (https://issues.rudder.io/issues/27338[#27338])
* Fixed: RHEL 8 - Section 4.1 : missing section & fixes
    (https://issues.rudder.io/issues/27339[#27339])
* Fixed: RHEL 8 - Section 4.2 : missing const.dollar & fixes
    (https://issues.rudder.io/issues/27340[#27340])
* Fixed: RHEL 8 - Section 2.2 : inversion of key / value & fixes
    (https://issues.rudder.io/issues/27342[#27342])
* Fixed: RHEL 8 - Section 3.1 : errors on control point
    (https://issues.rudder.io/issues/27343[#27343])
* Fixed: RHEL 8 - Section 5.2 - Configure system accounting
    (https://issues.rudder.io/issues/27222[#27222])
* Fixed: RHEL 8 - Section 4.3 : missing bash for executing script
    (https://issues.rudder.io/issues/27341[#27341])
* Fixed: Script 6_2_4_UIDs_consistency.sh, 6_2_5_GIDs_consistency.sh, 6_2_6_username_consistency.sh, 6_2_7_groupname_consistency.sh exit 0 even when it should node
    (https://issues.rudder.io/issues/27350[#27350])
* Fixed: RHEL 8 - Section 6.2 - Local group & group settings
    (https://issues.rudder.io/issues/27225[#27225])

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

